packages/serial_transport/lib/src/native/serial_bindings.g.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint, unused_import, unused_element, deprecated_member_use_from_same_package
@ffi.DefaultAsset('package:serial_transport/src/native/serial_bindings.g.dart')
library;

import 'dart:ffi' as ffi;

/// Close a handle returned by hss_open(). Returns 0 on success, -1 otherwise.
@ffi.Native<ffi.Int Function(ffi.IntPtr)>()
external int hss_close(int handle);

/// List the USB serial ports present on the system.
///
/// Writes one line per port to `buf` (NUL-terminated, truncated to `buf_len`):
/// <path>\t<description>\t<vendor id hex>\t<product id hex>\t<is hyperscanner 0|1>\n
/// Vendor and product ids are empty when unknown. A port is a Hyperscanner
/// when its USB product string is "hyperscanner" (case-insensitive).
///
/// Returns the buffer size needed for the full list (including the NUL), so a
/// caller can retry with a larger buffer, or -1 on error.
@ffi.Native<ffi.Int Function(ffi.Pointer<ffi.Char>, ffi.Int)>()
external int hss_list_ports(ffi.Pointer<ffi.Char> buf, int buf_len);

/// Open a serial port (e.g. "/dev/ttyACM0", "/dev/cu.usbmodem1", "COM3") in
/// raw 8N1 mode with exclusive access and DTR disabled, and flush its buffers.
///
/// Returns a handle, or HSS_INVALID_HANDLE on failure.
@ffi.Native<
  ffi.IntPtr Function(ffi.Pointer<ffi.Char>, ffi.Pointer<ffi.Char>, ffi.Int)
>()
external int hss_open(
  ffi.Pointer<ffi.Char> path,
  ffi.Pointer<ffi.Char> err,
  int err_len,
);

/// Like hss_open(), at `baud` bits per second (0 for the default, 230400;
/// USB CDC devices ignore it). On POSIX systems the standard rates are
/// supported, and on macOS any rate.
@ffi.Native<
  ffi.IntPtr Function(
    ffi.Pointer<ffi.Char>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
  )
>()
external int hss_open_baud(
  ffi.Pointer<ffi.Char> path,
  int baud,
  ffi.Pointer<ffi.Char> err,
  int err_len,
);

/// Read up to `len` bytes, waiting at most `timeout_ms` for the first byte.
///
/// Returns the number of bytes read, 0 on timeout, or -1 on error or when the
/// device was disconnected.
@ffi.Native<
  ffi.Int Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
  )
>()
external int hss_read(
  int handle,
  ffi.Pointer<ffi.Uint8> buf,
  int len,
  int timeout_ms,
  ffi.Pointer<ffi.Char> err,
  int err_len,
);

/// Write all `len` bytes. Returns `len` on success or -1 on error.
@ffi.Native<
  ffi.Int Function(
    ffi.IntPtr,
    ffi.Pointer<ffi.Uint8>,
    ffi.Int,
    ffi.Pointer<ffi.Char>,
    ffi.Int,
  )
>()
external int hss_write(
  int handle,
  ffi.Pointer<ffi.Uint8> buf,
  int len,
  ffi.Pointer<ffi.Char> err,
  int err_len,
);

const int HSS_INVALID_HANDLE = -1;
